fix: getEpicSubtasks